--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -640,6 +640,11 @@
 	<string name="register_via_agent">Register Via Agent</string>
 	<string name="upload_Documents">Upload Documents</string>
 	<string name="last_trip_earning">Last Trip Driver’s Earnings</string>
+	<string name="self_audit">Self Audit</string>
+	<string name="front">Front</string>
+	<string name="add_photo">+ Add Photo</string>
+	<string name="left">Left</string>
+	<string name="right">Right</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
