--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -265,7 +265,7 @@
 
 	<string name="jugnoo_cash">Jugnoo Cash</string>
 	<string name="jugnoo">Jugnoo</string>
-	<string name="jugnoo_off">Jugnoo OFF.</string>
+	<string name="jugnoo_off">Jugnoo OFF</string>
 	<string name="jugnoo_cut">Jugnoo Cut</string>
 
 	<string name="loading">Loading ...</string>
